FDCORE-7632 Alignment issue
FDCORE-7632 Alignment issue

--- a/public/src/falcon/falcon-common.scss
+++ b/public/src/falcon/falcon-common.scss
@@ -207,10 +207,23 @@ $survey-options-color: (
   width: 97%;
   margin: auto;
   .compose-new-ticket {
+    li.field {
+      .options-wrapper {
+        left: -40px
+      }
+    }
     li.field.default_tags, li.field.default_subject, li.field.custom_text, li.field.custom_paragraph, li.field.custom_checkbox, li.field.custom_number, li.field.custom_date, li.field.custom_decimal {
       .options-wrapper {
         left: -8px
       }
+    }
+  }
+}
+
+.list-page.ticket-template-list{
+  .list-page-body{
+    td.template-desc.ticket-details{
+      width: 80%;
     }
   }
 }
